--- a/styles.css
+++ b/styles.css
@@ -138,16 +138,49 @@ opacity: 1;
     justify-content: center;
     flex-direction: row;
     padding: 150px;
+    gap: 250px;
 }
 
+#nivel{
+    text-align: left¡;
+    font: normal normal medium 20px/24px Raleway;
+    letter-spacing: 0px;
+    color: #7C4D20;
+    opacity: 1;
+}
+
+#royalmaster{
+ 
+    
+width: 259px;
+height: 49px;
+
+text-align: left;
+font: normal normal bold 42px/49px Raleway;
+letter-spacing: 0px;
+color: #000000;
+opacity: 1;
+
+}
+
+.caragold{
+    position: relative;
+    width: 500px;
+    height: 285px;
+background: transparent linear-gradient(180deg, #F6E687 0%, #7C4D20 100%) 0% 0% no-repeat padding-box;
+opacity: 1;
+}
 
 #cara{
     position: absolute;
-    
+            
+       right: 20px;
+       bottom: 20px;
+        width: 500px;
+        height: 285px;
 }
 
 #gold{
-    position: relative;
  
 width: 602px;
 height: 385px;
