--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,17 @@
     box-sizing: border-box;
 }
 
+.header{
+    
+    display: flex;
+    justify-content: center;
+
+}
+
 #fondo1{
     background-image: url(img/header/fondo1.png); 
     background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-/*  background-color: rgba(0,0,0,0.6);*/
+ background-color: rgba(0,0,0,0.9);
 }
 /*
 #fondo1::before{
@@ -29,17 +34,14 @@
 #fondo2{
     background-image: url(img/header/fondo2.png); 
     background-repeat: no-repeat;
-    background-position: center;
-    
     
 }
 
 #fondo3{
 
-   background-color: rgba(0,0,0,0.7);
+ background-color: rgba(0,0,0,0.9);
     background-repeat: no-repeat;
-    background-position: right;
-    
+
 }
 
 
@@ -50,7 +52,7 @@
     background-position: center;
     */
     
-    width: 100%;
+    width: 1500px;
      height: 900px;
     /*Flexbox*/
     display: flex;
@@ -83,9 +85,11 @@
     gap: 8px;
     display: flex;
    padding: 20px;
-    background-color:black;
     align-items: center;
    
+    background: transparent linear-gradient(174deg, #000000 0%, #909090 100%) 0% 0% no-repeat padding-box;
+box-shadow: 0px 60px 40px #161D3745;
+border-radius: 20px;
 }
 
 #obtener{
@@ -132,13 +136,22 @@ opacity: 1;
 
 /*------------------------------------*/
 
+#royal{
+ /*   display: flex;
+        justify-content: center;
+   */
+    background-color: #D6AD78;
+    width: 100%;
+}
 
 .royals{
     display: flex;
     justify-content: center;
     flex-direction: row;
     padding: 150px;
-    gap: 250px;
+    gap: 400px;
+    background-color: aqua;
+    width: 100%;
 }
 
 #nivel{
@@ -165,10 +178,10 @@ opacity: 1;
 
 .caragold{
     position: relative;
-    width: 500px;
-    height: 285px;
-background: transparent linear-gradient(180deg, #F6E687 0%, #7C4D20 100%) 0% 0% no-repeat padding-box;
-opacity: 1;
+    display: flex;
+    width: 400px;
+    height: 255px;
+    background: transparent linear-gradient(180deg, #F6E687 0%, #7C4D20 100%) 0% 0% no-repeat padding-box;
 }
 
 #cara{
@@ -176,8 +189,8 @@ opacity: 1;
             
        right: 20px;
        bottom: 20px;
-        width: 500px;
-        height: 285px;
+        width: 400px;
+        height: 255px;
 }
 
 #gold{
@@ -188,15 +201,22 @@ background: transparent linear-gradient(180deg, #F6E687 0%, #7C4D20 100%) 0% 0% 
 opacity: 1;
 }
 
-/*
-.left{
- top: 288px;
-left: 322px;
-width: 662px;
-height: 198px;
-text-align: left;
-font: normal normal bold 56px/66px Raleway;
-letter-spacing: 0px;
-color: #FFFFFF;
-opacity: 1;
-}*/
+/*Video*/
+
+#video{
+
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
+#somos{
+    width: 443px;
+    height: 49px;
+    
+    font: normal normal bold 42px/49px Raleway;
+    gap: 20px;
+}
